--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Start Bootstrap</a>
+                <a class="navbar-brand topnav" href="#">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -52,7 +52,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="#project">Projects</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -81,7 +81,10 @@
                                 <a href="https://github.com/leungc70" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
                             <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a href="https://ca.linkedin.com/in/ryancyleung" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-book fa-fw"></i> <span class="network-name">Reusme</span></a>
                             </li>
                         </ul>
                     </div>
@@ -96,7 +99,7 @@
 
     <!-- Page Content -->
 
-	<a  name="services"></a>
+	<a  name="project"></a>
     <div class="content-section-a">
 
         <div class="container">
@@ -104,11 +107,18 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h2 class="section-heading">Event Hosting Website</h2>
+                    <p class="lead"><a target="_blank" href="http://e-vents.herokuapp.com/#/">E-vents</a> (E-sports Events) is a social networking site geared towards connecting gaming
+                                    enthusiasts to community gaming events.You can host and register for a wide variety of event.</p>
+                    <ul class="job-skills ">
+                        <li class="job-skill">AngularJS</li>
+                        <li class="job-skill">PassportJS</li>
+                        <li class="job-skill">MongoDB</li>
+                        <li class="job-skill">CSS3</li>
+                    </ul>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="img/e-vents.png" alt="">
                 </div>
             </div>
 
@@ -126,11 +136,21 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">ProjectCS</h2>
+                    <p class="lead">
+                        An interactive tool that will help facilitate the process of planning a
+                        computer science student’s 4-year schedule at the University of Toronto.<br>
+
+                    </p>
+                    <ul class="job-skills ">
+                        <li class="job-skill">Arbor.JS</li>
+                        <li class="job-skill">AngularJS</li>
+                        <li class="job-skill">MongoDB</li>
+                        <li class="job-skill">Boostrap</li>
+                    </ul>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img class="img-responsive" src="img/projectCS.png" alt="">
                 </div>
             </div>
 
@@ -144,17 +164,50 @@
 
         <div class="container">
 
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
-                </div>
-            </div>
+            <div class="row skills-row">
+        			<div class="col-sm-3 test">
+        				<h3 class="skill-header">Frontend</h3>
+        					<ul class="box">
+        						<li >HTML5</li>
+        						<li >CSS3</li>
+        						<li >JavaScript</li>
+        						<li >JQuery</li>
+        						<li >AngularJS</li>
+        					</ul>
+        			</div>
+        			<div class="col-sm-3">
+        				<h3 class="skill-header">Backend</h3>
+        					<ul class="box">
+        						<li >MySQL</li>
+        						<li >Postgre</li>
+        						<li >MongoDB</li>
+                                <li><br></li>
+                                <li><br></li>
+        					</ul>
+        			</div>
+        			<div class="col-sm-3">
+        				<h3 class="skill-header">Programming</h3>
+        					<ul class="list-unstyled">
+        						<li >C</li>
+        						<li >Java</li>
+        						<li >Python</li>
+                                <li><br></li>
+                                <li><br></li>
+        					</ul>
+        			</div>
+        			<div class="col-sm-3">
+        				<h3 class="skill-header">Design</h3>
+        					<ul class="list-unstyled">
+        						<li>Photoshop</li>
+        						<li >Sketch</li>
+        						<li >Origami</li>
+        						<li >Form</li>
+        						<li >Framer.js</li>
+        						<li >Illustrator</li>
+        						<li >PaintCode</li>
+        					</ul>
+        			</div>
+        		</div>
 
         </div>
         <!-- /.container -->
@@ -169,18 +222,18 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
+                    <h2>Connect to Ryan:</h2>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            <a href="mailto:ryancy.leung@mail.utoronto.ca" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
                         </li>
                         <li>
-                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            <a href="https://github.com/leungc70" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                         </li>
                         <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <a href="https://ca.linkedin.com/in/ryancyleung" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
                     </ul>
                 </div>
@@ -207,14 +260,14 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Services</a>
+                            <a href="#project">Projects</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Ryan Leung 2016. All Rights Reserved</p>
                 </div>
             </div>
         </div>
