--- a/index.html
+++ b/index.html
@@ -181,30 +181,28 @@
         						<li >MySQL</li>
         						<li >Postgre</li>
         						<li >MongoDB</li>
-                                <li><br></li>
+                                <li>NodeJS</li>
                                 <li><br></li>
         					</ul>
         			</div>
         			<div class="col-sm-3">
         				<h3 class="skill-header">Programming</h3>
-        					<ul class="list-unstyled">
+        					<ul class="box">
         						<li >C</li>
         						<li >Java</li>
         						<li >Python</li>
-                                <li><br></li>
+                                <li>Visual Basic</li>
                                 <li><br></li>
         					</ul>
         			</div>
         			<div class="col-sm-3">
-        				<h3 class="skill-header">Design</h3>
-        					<ul class="list-unstyled">
-        						<li>Photoshop</li>
-        						<li >Sketch</li>
-        						<li >Origami</li>
-        						<li >Form</li>
-        						<li >Framer.js</li>
-        						<li >Illustrator</li>
-        						<li >PaintCode</li>
+        				<h3 class="skill-header">Version Control</h3>
+        					<ul class="box">
+        						<li>Git</li>
+        						<li >SVN</li>
+        						<li >Mercurial</li>
+                                <li><br></li>
+                                <li><br></li>
         					</ul>
         			</div>
         		</div>
