added resume file

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <a href="https://ca.linkedin.com/in/ryancyleung" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                             </li>
                             <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-book fa-fw"></i> <span class="network-name">Reusme</span></a>
+                                <a href="file/Resume.pdf" class="btn btn-default btn-lg"><i class="fa fa-book fa-fw"></i> <span class="network-name">Reusme</span></a>
                             </li>
                         </ul>
                     </div>
