added cytoscape in ProjectCS

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                         <li class="job-skill">AngularJS</li>
                         <li class="job-skill">MongoDB</li>
                         <li class="job-skill">Boostrap</li>
+                        <li class="job-skill">Cytoscape</li>
                     </ul>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
