--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Ryan Leung</h1>
-                        <h3>Computer Science Sutdent @ University of Toronto</h3>
+                        <h3>Computer Science Student @ University of Toronto</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
@@ -84,7 +84,7 @@
                                 <a href="https://ca.linkedin.com/in/ryancyleung" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                             </li>
                             <li>
-                                <a href="file/Resume.pdf" class="btn btn-default btn-lg"><i class="fa fa-book fa-fw"></i> <span class="network-name">Reusme</span></a>
+                                <a href="file/Resume.pdf" class="btn btn-default btn-lg"><i class="fa fa-book fa-fw"></i> <span class="network-name">Resume</span></a>
                             </li>
                         </ul>
                     </div>
