added projectCS link

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	
+
 	ga('create', 'UA-74317543-1', 'auto');
 	ga('send', 'pageview');
-	
+
     </script>
 </head>
 
@@ -145,7 +145,7 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">ProjectCS</h2>
+                    <h2 class="section-heading"><a href="http://project-cs.herokuapp.com/"ProjectCS</a></h2>
                     <p class="lead">
                         An interactive tool that will help facilitate the process of planning a
                         computer science student’s 4-year schedule at the University of Toronto.<br>
