fixed projectCS link

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading"><a href="http://project-cs.herokuapp.com/"ProjectCS</a></h2>
+                    <h2 class="section-heading"><a href="http://project-cs.herokuapp.com/>"ProjectCS</a></h2>
                     <p class="lead">
                         An interactive tool that will help facilitate the process of planning a
                         computer science student’s 4-year schedule at the University of Toronto.<br>
